[package]
name = "gettext-sys-with-system-gettext"
version = "0.19.8"
authors = ["Alexander Batischev <eual.jp@gmail.com>"]

[dependencies.gettext-sys]
version = "0.19.8"
# Don't let the crate build its own copy of gettext; force it to use the one
# built into glibc.
features = [ "gettext-system" ]
